Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124869

qtconfigmacros.h is missing an include

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.8.0 FF
    • 6.8.0
    • Core: Other
    • None
    • 66c0f46d0 (dev)

    Description

      Hi,

      If I add the following line to my qmake .pro file:

      DEFINES += QT_ENABLE_STRICT_MODE_UP_TO=0x060800

      I get an error related to unknown QT_VERSION_CHECK

      To  fix the compilation, I need to add the following include to qtconfigmacros.h

      #include <QtVersionChecks.h>

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            reg31 Regis Duflaut
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes