qtconfigmacros.h: add missing include: we use QT_VERSION_CHECK

Amends 3a6c8e02b6d1b0574da52b0087092d0c74aa92c1, which introduced this
check.

Fixes: QTBUG-124869
Change-Id: I262c3499666e4f4fbcfbfffd17cacbb6025150da
Reviewed-by: Ahmad Samir <a.samirh78@gmail.com>
Reviewed-by: Marc Mutz <marc.mutz@qt.io>